--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Hexlet Frontend Project</title>
     </head>
     <body class="d-flex flex-column min-vh-100">
-<!-- <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
     <div class="modal-dialog" role="document"><div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title"></h5>
@@ -20,7 +20,7 @@
         </div>
     </div>
 </div>
-</div> -->
+</div>
 <main class="flex-grow-1">
     <section class="container-fluid bg-dark p-5">
         <div class="row">
